# array2image

./: .gitignore  README.md  pyproject.toml
src/array2image/: __init__.py  core.py
tests/: test_utils.py
